visibility icon button fixed

--- a/src/routes/front-page-signup/front-page-signup.styles.scss
+++ b/src/routes/front-page-signup/front-page-signup.styles.scss
@@ -16,12 +16,6 @@
 	left: 11%;
 	top: 6%;
 	width: 69%;
-
-	Button {
-		margin-top: 4%;
-		width: 206px;
-	height: 48px;
-	}
 }
 
 .signup-heading {
